finished the styles, at this point, the page is running

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -4,3 +4,4 @@ $subtitle-size: 1rem; /*16px*/
 $background-color: #ffd7e3;
 $text: #7c6c88;
 $background-button: white;
+$background-color-dark: #fac5d5;
