--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,4 +1,7 @@
 .header{
+    background-image: url("../images/sakura-alex.png");
+    background-repeat: no-repeat;
+    background-position: center;
     font-weight: 600;
     height: 20vh;
     display: flex;
