--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,14 +1,12 @@
 .main{
-    background-image: url("./assets/images/sakura-alex.png");
-    background-repeat: no-repeat;
-    background-position: left bottom;
     min-height: 80vh;
     
 
     &__form{
-        padding-left: 5%;
-        padding-bottom: 1%;
+        background-color: $background-color-dark;
+        padding: 1% 5%;
         border-bottom: 1px solid $background-button;
+        border-top: 1px solid $background-button;
     }
 
     &__user{
@@ -23,7 +21,6 @@
     }
 
     &__section{
-        background-color: $background-color;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
