--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -20,6 +20,10 @@
         color: $text;
     }
 
+    &__search:hover, &__reset:hover{
+        background-color: $background-color;
+    }
+
     &__section{
         display: grid;
         grid-template-columns: 1fr 1fr;
